# cva6

./: .bazelrc  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .metrics.json  .metrics.json~  .readthedocs.yaml  .travis.yml  ACKNOWLEDGEMENTS.md  AXI_Interface.rst  BUG_TEMPATE.md  BUILD  Bender.yml  Bender.yml.old  CHANGELOG  CHANGELOG-PULP.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTROLLER_TRANSITION_FINAL_SUMMARY.md  CSR_Performance_Counters.rst  CVA6_CACHE_TESTING_SUMMARY.md  CVX_Interface_Coprocessor.rst  FULLY_ASSOCIATIVE_CACHE_README.md  Flist.ariane  Flist.corev_apu  Flist.cva6  Flist.fpga  Flist.hpdc_param  Flist.tb  GitCheats.md  GitCheats.txt  Interfaces.rst  LICENSE  LICENSE.Berkeley  LICENSE.md  (+94 more)
.github/: dependabot.yml  pull_request_template.md
.gitlab-ci/: README.md  core-v-verif-cva6.yml  cv32.yml  cva6.yml  expected_synth.yml  iti_reference.trace
OpenOCD_config/: zedboard_cva6.cfg
bazel/: constraints-sram.sdc  constraints.sdc  hpdcache_sram_1rw.sv  hpdcache_sram_1rw_impl.sv  hpdcache_sram_wbyteenable_1rw.sv  hpdcache_sram_wbyteenable_1rw_impl.sv  io-sram.tcl  util.tcl
bootrom/: Makefile  ariane.dts  bootrom.S  bootrom.h  bootrom.hex  bootrom.img  bootrom.sv  cva6.dts  dromajo_bootrom.sv  encoding.h  gen_mem.py  gen_mim.py  gen_rom.py
cache_comparison_20250529_122702/: SUMMARY.md  cache_heatmap.txt  comparison_report.md  generate_heatmaps.py  performance_summary.md
ci/: MetricsCheats.md  README.md  build-ariane-sdk-toolchain.sh  build-ariane-sdk.sh  build-hyp-riscv-tests.sh  build-riscv-gcc.sh  build-riscv-tests.sh  check-tests.sh  ci_check  default.config  float.config  get-torture.sh  gitlab-ci-emul.sh  install-dtc.sh  install-fesvr.sh  install-prereq.sh  install-riscvpk.sh  install-spike.sh  install-toolchain.sh  install-verilator.sh  make-tmp.sh  path-setup.sh  riscv-amo-tests.list  riscv-asm-tests.list  riscv-benchmarks.list  riscv-clic-tests.list  riscv-fp-tests.list  riscv-mul-tests.list  (+6 more)
core/cvfpu/tb/flexfloat/examples/: CMakeLists.txt  example01.cpp  example_stats.c  example_tracking.c
(+6560 files in other folders)
